# data_maker

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.py
src/: generator.py  parse_config.py  parser.py
