[tool.poetry]
name = "data-maker"
version = "0.1.0"
description = "A package wrapping `faker` and allowing for more generalised table creation."
authors = ["RJH <rhunt04@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8.8"
pydantic = "^1.10.4"
faker = "^16.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
ruff = "^0.0.237"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
